Try to fix alignment on navbar

--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ header {
 .navbar {
     display: flex;
     justify-content: space-between;
-    width: 100%;
+    width: 940px;
 }
 
 .hlogo {
